--- a/Chromashift-Prototype/core/build.gradle
+++ b/Chromashift-Prototype/core/build.gradle
@@ -13,6 +13,13 @@ dependencies {
   api "com.badlogicgames.gdx:gdx:$gdxVersion"
   api "com.esotericsoftware:kryo:$kryoVersion"
   api "com.github.crykn:kryonet:$kryoNetVersion"
+  // freetype font support for skins
+  api "com.github.raeleus.stripe:freetype:$stripeVersion"
+  // ten patch for better ProgressBar support (scene2d)
+  api "com.github.raeleus.TenPatch:tenpatch:$tenPatchVersion"
+  // typing label support
+  api "com.github.tommyettinger:textratypist:$textraTypistVersion"
+  api "com.github.tommyettinger:freetypist:$freeTypistVersion"
 
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
