added pickable objects
TODO: fix the pickable object collision to other pickable object
TODO: fix the orb bounce functionality

--- a/Chromashift/core/build.gradle
+++ b/Chromashift/core/build.gradle
@@ -23,5 +23,5 @@ dependencies {
 
   if(enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
-  }
+  }// Note: dependencies for desktop, android, ios, and html projects are in their respective build.gradle files
 }
