--- a/Chromashift/core/build.gradle
+++ b/Chromashift/core/build.gradle
@@ -2,7 +2,7 @@
 eclipse.project.name = appName + '-core'
 
 dependencies {
-  implementation "com.chromashift.helper:ChormashiftHelperPackage:1.0.0"
+  // implementation "com.chromashift.helper:ChormashiftHelperPackage:1.0.0"
   api "com.badlogicgames.ashley:ashley:$ashleyVersion"
   api "com.badlogicgames.box2dlights:box2dlights:$box2dlightsVersion"
   api "com.badlogicgames.gdx-controllers:gdx-controllers-core:$gdxControllersVersion"
