--- a/Chromashift/core/build.gradle
+++ b/Chromashift/core/build.gradle
@@ -2,6 +2,8 @@
 eclipse.project.name = appName + '-core'
 
 dependencies {
+  implementation 'mysql:mysql-connector-java:8.0.33'
+  implementation 'com.google.code.gson:gson:2.10.1'
   // implementation "com.chromashift.helper:ChormashiftHelperPackage:1.0.0"
   api "com.badlogicgames.ashley:ashley:$ashleyVersion"
   api "com.badlogicgames.box2dlights:box2dlights:$box2dlightsVersion"
